<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.30"
            android:orientation="horizontal"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/register_layer_two"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <ImageView
            android:id="@+id/iv_layer_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/register_layer_one"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:id="@+id/title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_txt"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/guide_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/iv_birds_parent"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/birds_icon"
            android:layout_marginStart="10dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@+id/title_txt"
            app:layout_constraintStart_toStartOf="parent"/>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/base_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            android:layout_marginHorizontal="30dp"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/editext_bg"
            app:layout_constraintTop_toBottomOf="@+id/title_txt">


            <TextView
                android:id="@+id/welcome_content_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_content_txt"
                android:textColor="@color/app_color"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/welcome_content_txt"
                app:layout_constraintStart_toStartOf="parent">


                <ImageView
                    android:id="@+id/iv_birds_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/birds_icon"
                    android:layout_marginTop="5dp"
                    app:tint="@color/app_color"
                    android:layout_marginHorizontal="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>


                <TextView
                    android:id="@+id/welcome_sub_content_txt_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_sub_content_txt_one"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginStart="15dp"
                    app:layout_constraintStart_toEndOf="@+id/iv_birds_one"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageView
                    android:id="@+id/iv_birds_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/birds_icon"
                    android:layout_marginTop="25dp"
                    app:tint="@color/app_color"
                    android:layout_marginHorizontal="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/iv_birds_one"
                    app:layout_constraintStart_toStartOf="parent"/>


                <TextView
                    android:id="@+id/welcome_sub_content_txt_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_sub_content_txt_two"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="15dp"
                    app:layout_constraintStart_toEndOf="@+id/iv_birds_two"
                    app:layout_constraintTop_toBottomOf="@+id/welcome_sub_content_txt_one"
                    />


                <ImageView
                    android:id="@+id/iv_birds_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/birds_icon"
                    android:layout_marginTop="25dp"
                    app:tint="@color/app_color"
                    android:layout_marginHorizontal="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/iv_birds_two"
                    app:layout_constraintStart_toStartOf="parent"/>


                <TextView
                    android:id="@+id/welcome_sub_content_txt_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_sub_content_txt_three"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="15dp"
                    app:layout_constraintStart_toEndOf="@+id/iv_birds_three"
                    app:layout_constraintTop_toBottomOf="@+id/welcome_sub_content_txt_two"
                    />


                <ImageView
                    android:id="@+id/iv_birds_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/birds_icon"
                    android:layout_marginTop="25dp"
                    app:tint="@color/app_color"
                    android:layout_marginHorizontal="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/iv_birds_three"
                    app:layout_constraintStart_toStartOf="parent"/>


                <TextView
                    android:id="@+id/welcome_sub_content_txt_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_sub_content_txt_four"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="15dp"
                    app:layout_constraintStart_toEndOf="@+id/iv_birds_four"
                    app:layout_constraintTop_toBottomOf="@+id/welcome_sub_content_txt_three"
                    />



                <ImageView
                    android:id="@+id/iv_birds_five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/birds_icon"
                    app:tint="@color/app_color"
                    android:layout_marginTop="25dp"
                    android:layout_marginHorizontal="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/iv_birds_four"
                    app:layout_constraintStart_toStartOf="parent"/>


                <TextView
                    android:id="@+id/welcome_sub_content_txt_five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_sub_content_txt_five"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="15dp"
                    app:layout_constraintStart_toEndOf="@+id/iv_birds_five"
                    app:layout_constraintTop_toBottomOf="@+id/welcome_sub_content_txt_four"
                    />


                <ImageView
                    android:id="@+id/iv_birds_six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/birds_icon"
                    android:layout_marginTop="25dp"
                    android:layout_marginHorizontal="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/iv_birds_five"
                    app:layout_constraintStart_toStartOf="parent"
                    app:tint="@color/app_color" />


                <TextView
                    android:id="@+id/welcome_sub_content_txt_six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_sub_content_txt_six"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="15dp"
                    app:layout_constraintStart_toEndOf="@+id/iv_birds_six"
                    app:layout_constraintTop_toBottomOf="@+id/welcome_sub_content_txt_five"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>




        </androidx.constraintlayout.widget.ConstraintLayout>


        <RelativeLayout
            android:id="@+id/sliderLayout"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="@drawable/bg_slider"
            app:layout_constraintTop_toBottomOf="@id/base_cardview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Start Text -->
            <TextView
                android:id="@+id/tvStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start!"
                android:textColor="@color/app_color"
                android:textSize="18sp"
                android:layout_centerInParent="true"/>

            <!-- Arrow >>> -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=">>>"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_toEndOf="@id/tvStart"
                android:layout_marginStart="8dp"
                android:layout_centerVertical="true"/>

            <!-- Draggable Button -->
            <ImageView
                android:id="@+id/sliderBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_check"
                android:background="@drawable/bg_slider_button"
                android:padding="15dp"
                android:layout_margin="5dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>